fix: quick fix overflowe image by 100% width

--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -6,3 +6,6 @@
 .color-inherit
   color: inherit
   background-color: inherit
+
+.content img
+  max-width 100%
